Desarrollo del Login

--- a/TriadRestockSystem/appsettings.json
+++ b/TriadRestockSystem/appsettings.json
@@ -1,12 +1,17 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "AllowedHosts": "*",
+  "AppSettings": {
+    "TokenKey": "9y$B&E)H@McQfTjWnZr4u7x!z%C*F-JaNdRgUkXp2s5v8y/B?D(G+KbPeShVmYq3t6w9z$C&F)H@McQfTjWnZr4u7x!A%D*G-KaNdRgUkXp2s5v8y/B?E(H+MbQeShVmYq3t6w9z$C&F)J@NcRfUjWnZr4u7x!A%D*G-KaPdSgVkYp2s5v8y/B?E(H+MbQeThWmZq4t6w9z$C&F)J@NcRfUjXn2r5u8x!A%D*G-KaPdSgVkYp3s6v9y$B?E(H+Mb",
+    "AesKey": "KbPeShVmYq3t6w9z$C&F)J@NcRfTjWnZ",
+    "AesIV": "A1B2C3D4E5F6H7I8"
+  },
   "ConnectionStrings": {
     "InventarioDB": "Server=DESKTOP-45HEHDB\\MSSQLSERVER01;Database=InventarioDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
