--- a/TriadRestockSystem/ClientApp/package.json
+++ b/TriadRestockSystem/ClientApp/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^5.5.2",
+    "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
@@ -32,13 +34,19 @@
   "devDependencies": {
     "ajv": "^8.11.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.18.0",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "nan": "^2.16.0",
+    "prettier": "^2.8.8",
     "typescript": "^4.7.4"
   },
   "overrides": {
