Desarrollo del módulo de Solicitudes

--- a/TriadRestockSystem/appsettings.json
+++ b/TriadRestockSystem/appsettings.json
@@ -13,6 +13,6 @@
     "AesIV": "A1B2C3D4E5F6H7I8"
   },
   "ConnectionStrings": {
-    "InventarioDB": "Server=BER;Database=InventarioDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "InventarioDB": "Server=DESKTOP-45HEHDB\\MSSQLSERVER01;Database=InventarioDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
