--- a/TriadRestockSystem/ClientApp/package.json
+++ b/TriadRestockSystem/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^5.5.2",
+    "antd": "^5.7.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
@@ -11,6 +11,7 @@
     "merge": "^2.1.1",
     "moment": "^2.29.4",
     "oidc-client": "^1.11.5",
+    "rc-animate": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
