--- a/TriadRestockSystem/ClientApp/package.json
+++ b/TriadRestockSystem/ClientApp/package.json
@@ -13,6 +13,7 @@
     "oidc-client": "^1.11.5",
     "rc-animate": "^3.1.1",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-router-bootstrap": "^0.26.1",
