--- a/TriadRestockSystem/ClientApp/package.json
+++ b/TriadRestockSystem/ClientApp/package.json
@@ -6,6 +6,8 @@
     "antd": "^5.7.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^4.4.0",
+    "faker": "^6.6.6",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
@@ -13,6 +15,7 @@
     "oidc-client": "^1.11.5",
     "rc-animate": "^3.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
@@ -36,6 +39,7 @@
     "workbox-streams": "^6.5.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
     "ajv": "^8.11.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.41.0",
